--- a/index.html
+++ b/index.html
@@ -13,25 +13,20 @@
       <form action="#null" method="POST" class="allthefields">
       
       <div class="field">
-        <label for="name">Name:</label>
-        <input type="text" name="name" id="name" required>
+        <label for="firstname">First Name:</label>
+        <input type="text" name="firstname" id="firstname" required>
       </div>
 
       <div class="field">
-        <label for="email">Email: </label>
-        <input type="email" name="email" id="email" required>
+        <label for="lastname">Last Name: </label>
+        <input type="text" name="lastname" id="lastname" required>
       </div>
 
       <div class="field">
-        <label for="password">Create a password: </label>
-        <input type="password" name="password" id="password" required>
+        <label for="number">Please enter your favorite number: </label>
+        <input type="text" name="number" id="number" required>
       </div>
-
-      <div class="field">
-        <label for="vpassword">Verify your password: </label>
-        <input type="password" name="vpassword" id="vpassword" required>
-      </div>
-
+        
       <div class="field">
         <input type="submit" value="Submit">
       </div>
