--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <script src="javascript.js"></script>
     <title>Create Acoount</title>
   </head>
     
