--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <script src="jquery-3.4.1.min.js"></script>
     <script src="javascript.js"></script>
     <title>Create Acoount</title>
   </head>
