--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       <div class="field">
         <input type="submit" value="Submit">
       </div>
+           
+      <div class="field">
+        <input type="Submit" value="Output" id="output">
+      </div>
     </form>
 
   </div>
