--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
         
       <div class="field">
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit" id="sub">
       </div>
            
       <div class="field">
