--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="javascript.js"></script>
     <title>Create Acoount</title>
   </head>
