--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <div class="field">
         <label for="number">Please enter your favorite number: </label>
-        <input type="text" name="number" id="number" required>
+        <input type="number" name="number" id="number" required>
       </div>
         
       <div class="field">
