--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       <div class="field">
         <input type="Submit" value="Output" id="output">
       </div>
+        
+        <p id="data"> </p>
+        
     </form>
 
   </div>
