--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1> Please input this information: </h1>
     <div class="contain">
-      <form method="POST" class="allthefields">
+      <form class="allthefields">
       
       <div class="field">
         <label for="firstname">First Name:</label>
